Initial work on front end homepage mock up.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.0",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "tailwindcss": "^2.2.15"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
